deleteed some stuf

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<!-- saved from url=(0081)https://dl2.pushbulletusercontent.com/IfnzcNo4QJeLwUyeNuGf9FupkL6gzDDG/index.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body><h1>Hello World</h1>
+
+</head>
+<body>
+<h1>Hello World</h1>
+
 <p>I'm hosted with myself.</p>
 
-</body></html>
+
+</body>
+</html>
