add images and include them

--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 <body>
 <center>
 <br/><br/>
-<img src="comma.png"><br/>
+<img src="uavb+w.png"><br/>
 <br/>
 <span style="font-family: monospace">ghostriding for the masses</span>
 <br/><br/>
@@ -38,6 +38,9 @@ can you solve our <a href="http://geohot.com/projective_challenge.tar.gz">progra
 <br/><br/>
 <span style="font-family: monospace">&lt;my first name&gt; at comma.ai</span>
 <br/><br/>
+
+<br/>
+<img src="badjoke.jpeg"><br/>
 
 </center>
 
