--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 <body>
 <center>
 <br/><br/>
-<img src="uavb+w.png"><br/>
+<img src="uavb+w.png" width="200px" height="200px"><br/>
 <br/>
 <span style="font-family: monospace">ghostriding for the masses</span>
 <br/><br/>
