--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <center>
 <br/><br/>
-<img src="uavb+w.png"><br/>
+<img src="uavbw.png"><br/>
 <br/>
 <span style="font-family: monospace">ghostriding for the masses</span>
 <br/><br/>
@@ -40,7 +40,7 @@ can you solve our <a href="http://geohot.com/projective_challenge.tar.gz">progra
 <br/><br/>
 
 <br/>
-<img src="badjoke.jpeg"><br/>
+<img src="badjoke.png"><br/>
 
 </center>
 
