--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <br/><br/>
 <img src="uavbw.png"><br/>
 <br/>
-<span style="font-family: monospace">ghostriding for the masses</span>
+what if i do this
+<span style="font-family: monospace">stumbling into aerodynamics</span>
 <br/><br/>
 <span style="font-family: monospace; font-size: 32px"><a href=research.html>research</a></span><br/>
 <br/>
