--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ can you solve our <a href="http://geohot.com/projective_challenge.tar.gz">progra
 <br/><br/>
 <span style="font-family: monospace"><a href="http://commaai.blogspot.com/">our blog</a></span>
 <br/><br/>
-<span style="font-family: monospace">&lt;my first name&gt; at comma.ai</span>
+<span style="font-family: monospace">achcello@gmail.com</span>
 <br/><br/>
 
 <br/><br/><br/><br/>
