--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ can you solve our <a href="http://geohot.com/projective_challenge.tar.gz">progra
 -->
 <span style="font-family: monospace">achcello@gmail.com</span>
 <br/><br/>
-
+achcello@gmail.com
 <br/><br/><br/><br/>
 <img src="badjoke.png"><br/>
 
