add pages, add video and model to posts.html for test

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {font-family: monospace;
 </head>
 
 <body>
+<a href=index.html>Home<a/> <a href=posts.html>Posts<a/> <a href=about.html>About Me<a/>
 <center>
 <br><br>
 <img src="uavbw.png"><br>
@@ -49,6 +50,8 @@ can you solve our <a href="http://geohot.com/projective_challenge.tar.gz">progra
 <a href="mailto:achcello@gmail.com">achcello@gmail.com</a>
 <br><br><br><br><br><br>
 <img src="badjoke.png"><br>
+<br><br><br><br>
+
 
 </center>
 
