--- a/posts.html
+++ b/posts.html
@@ -9,7 +9,31 @@ body {
 </style>
 </head>
 <body>
-All jobs on site in San Francisco, CA<br/>
+
+<a href=index.html>Home<a/> <a href=posts.html>Posts<a/> <a href=about.html>About Me<a/>
+<h2>Posts</h2>
+<h2>8/26/2016 - Airfoils</h2>
+
+<!-- This is the youtube embed code
+<iframe width="560" height="315" src="http://www.youtube.com/embed/g7zRzmB7QOg?autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>​
+-->
+I've been learning about airfoils and how exactly 
+<br><br>
+<center>
+<iframe src="https://player.vimeo.com/video/181095780?autoplay=1&loop=1&color=ffffff&portrait=0" width="480" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="sketchfab-embed-wrapper"><iframe width="480" height="240" src="https://sketchfab.com/models/3c5f9619c054407d8a2db6c4e7b32582/embed?autospin=0.2&amp;autostart=1" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+
+<p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;">
+    <a href="https://sketchfab.com/models/3c5f9619c054407d8a2db6c4e7b32582?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">NACA3410</a>
+    by <a href="https://sketchfab.com/achcello?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Aryn Harmon</a>
+    on <a href="https://sketchfab.com?utm_medium=embed&utm_source=website&utm_campain=share-popup" target="_blank" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+</p>
+</div>
+</center>
+<br>
+<br>
+
+<!--
 <h2>ML Software Engineer</h2>
 <b>DESCRIPTION</b><br/><br/>
 Comma's mission is to win the race to selfdriving cars.<br/><br/>
@@ -53,4 +77,4 @@ Build this<br/><br/>
 <li>Computer vision experience a plus.</li>
 </ul>
 Basically someone who could have written https://github.com/mapillary/OpenSfM or https://github.com/raulmur/ORB_SLAM2
-
+-->
