--- a/about.html
+++ b/about.html
@@ -15,3 +15,5 @@ body {
 	<br>
 </center>
 I am Aryn. I currently attend Adlai E. Stevenson High School as a senior. My interests lie in several areas, the most important being engineering, music, and anything related to those two.
+<br><br>
+I grew up building model rockets and paper airplanes. I admired scientists who made remarkable discoveries and, better yet, could explain them to me. This is what has led me to engineering and aeronautical studies.
