--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Aryn Harmon
 <br><br>
 <h2>Introduction</h2>
 <br>
-I have a curiosity for how exactly aircraft fly.<br>I want to know what different body types to do flight behavior,<br>how commercial aircraft are shaped differently than R/C planes.<br>Is it possible to create a hybrid between a quadcopter and a flying wing?
+I have a curiosity for how exactly aircraft fly.<br>I want to know how different body types influence flight behavior,<br>how commercial aircraft are shaped differently than R/C planes.<br>Is it possible to create a hybrid between a quadcopter and a flying wing?
 <br><br>
 These questions have led me to the study of aerodynamics.<br>Eventually I will study the design of flight vehicles as well,<br>but I need to establish a working knowledge of fluid physics<br>before I can apply it. I'll be following along<br>with MIT's introductory aerodynamics class.
 <h2><a href=posts.html>Posts<a/></h2>
