--- a/about.html
+++ b/about.html
@@ -17,3 +17,9 @@ body {
 I am Aryn. I currently attend Adlai E. Stevenson High School as a senior. My interests lie in several areas, the most important being engineering, music, and anything related to those two.
 <br><br>
 I grew up building model rockets and paper airplanes. I admired scientists who made remarkable discoveries and, better yet, could explain them to me. This is what has led me to engineering and aeronautical studies.
+
+<!--
+Flying like a bird
+not as free as one might think,
+bound tightly to Earth.
+-->
