--- a/haiku.html
+++ b/haiku.html
@@ -1,1 +1,16 @@
-
+<html>
+<head>
+<style>
+body {
+  font-family: monospace;
+  font-size: 32px;
+  width: 600px;
+}
+</style>
+</head>
+<br><br><br><br><br><br><br>
+<center>
+  Flying like a bird<br>
+  not as free as one might think,<br>
+  bound tightly to Earth.<br>
+</center>
