--- a/posts.html
+++ b/posts.html
@@ -24,7 +24,7 @@ An explanation of NACA airfoils and an example with a model and simulation . . .
 
 <hr>
 
-<h2><a href=>9/2/16 - Coefficients<a/></h2>
+<h2><a href=090216>9/2/16 - Coefficients<a/></h2>
 Definitions of drag and lift coefficients and how they might be used . . .
 
 <hr>
