--- a/posts.html
+++ b/posts.html
@@ -28,3 +28,8 @@ An explanation of NACA airfoils and an example with a model and simulation . . .
 Definitions of drag and lift coefficients and how they might be used . . .
 
 <hr>
+
+<h2><a href=090716>9/2/16 - Numbers<a/></h2>
+A brief explanation of the Reynolds umber and the Mach number and their effect on flow . . .
+
+<hr>
