--- a/082616.html
+++ b/082616.html
@@ -38,7 +38,7 @@ As a result, NACA 3410 means that the specified airfoil has a maximum camber tha
 
 I tried to use the NACA equations to construct an airfoil using Autodesk Inventor, but I ended up with this:<br>
 <center>
-	<img src="Capture11.PNG" height=150px><br>
+	<img src="Capture11.png" height=150px><br>
 </center>
 
 That's definitely incorrect. I'm not sure what went wrong, but I'll investigate this more once I talk to someone who can help with the math. I researched methods of modeling an airfoil and found that people do not normally model NACA airfoils using parametric equations. The workflow I used was this:<br>
