--- a/posts.html
+++ b/posts.html
@@ -24,12 +24,12 @@ An explanation of NACA airfoils and an example with a model and simulation . . .
 
 <hr>
 
-<h2><a href=090216>9/2/16 - Coefficients<a/></h2>
+<h2><a href=090216.html>9/2/16 - Coefficients<a/></h2>
 Definitions of drag and lift coefficients and how they might be used . . .
 
 <hr>
 
-<h2><a href=090716>9/2/16 - Numbers<a/></h2>
-A brief explanation of the Reynolds umber and the Mach number and their effect on flow . . .
+<h2><a href=090716.html>9/7/16 - Numbers<a/></h2>
+A brief explanation of the Reynolds number and the Mach number and their effect on flow . . .
 
 <hr>
