--- a/posts.html
+++ b/posts.html
@@ -30,6 +30,6 @@ Definitions of drag and lift coefficients and how they might be used . . .
 <hr>
 
 <h2><a href=090716.html>9/7/16 - Numbers<a/></h2>
-A brief explanation of the Reynolds number and the Mach number and their effect on flow . . .
+A brief explanation of the Reynolds and Mach numbers and their effect on flow . . .
 
 <hr>
