--- a/posts.html
+++ b/posts.html
@@ -29,7 +29,12 @@ Definitions of drag and lift coefficients and how they might be used . . .
 
 <hr>
 
-<h2><a href=090716.html>9/7/16 - Numbers<a/></h2>
+<h2><a href=090916.html>9/9/16 - Numbers<a/></h2>
 A brief explanation of the Reynolds and Mach numbers and their effect on flow . . .
+
+<hr>
+
+<h2><a href=091416.html>9/14/16 - Some Interesting Airfoils<a/></h2>
+A side note about some airfoils I've found . . .
 
 <hr>
