--- a/082616.html
+++ b/082616.html
@@ -62,7 +62,8 @@ I then imported that model into Autodesk Flow Design Analysis. This gave me this
 </center>
 <br>
 <br>
-This simulation is a great demonstration of how well NACA airfoils work for general use. There's a large area of high velocity above the airfoil which creates a pressure differential between the top and bottom sides of the wing. This pushes the wing up.
+This simulation is a great demonstration of how well NACA airfoils work for general use. There's a large area of high velocity above the airfoil which creates a pressure differential between the top and bottom sides of the wing. This pushes the wing up. <br><br><br>
+-Aryn Harmon
 
 <!--
 <h2>ML Software Engineer</h2>
