--- a/090216.html
+++ b/090216.html
@@ -48,3 +48,5 @@ $$\displaystyle C_ D \equiv \frac{D}{\frac{1}{2}\rho _{\infty }V_{\! \scriptscri
             <br>
             In order to scale the model, we must maintain these coefficients by adjusting our . If testing conditions stay the same, shouldn't all non-dimensional coefficients, numbers that by nature bear no relation to the <i>size or dimension</i>
             of the subject, remain constant? It is in this manner that we can test small models in wind tunnels and achieve results that are useful to us for full scale aircraft.
+            <br><br><br>
+            -Aryn Harmon
