--- a/090916.html
+++ b/090916.html
@@ -66,4 +66,5 @@
         <br><br>
         Aircraft with lower Reynolds numbers have larger boundary layers, the area close to the surface of the aircraft where the velocity of the flow is slowed by frictional stresses.
         <br><br>
-        The Reynolds number can be very important in testing bodies in wind tunnels. (More about that <a href=090216.html>here</a>.
+        The Reynolds number can be very important in testing bodies in wind tunnels. (More about that <a href=090216.html>here</a>. <br><br><br>
+        -Aryn Harmon
