--- a/posts.html
+++ b/posts.html
@@ -57,7 +57,7 @@
 <hr>
         <h2>
             <a href=092116.html>
-                9/21/16 - Range<a/>
+                9/21/16 - Cruising Range<a/>
         </h2>
         How to estimate the cruising range of an aircraft . . .
 
