--- a/091416.html
+++ b/091416.html
@@ -45,7 +45,7 @@
 		<ul>
 			<li>Create a folder with the name of the airfoil. Example: SD7037</li>
 			<li>Create a .DAT file (actually just a text file). Naming example: SD7037.DAT</li>
-			<li>Attain coordinates for the airfoil from airfoiltools.com and place these in the text file. <a href="sd7037.dat.html" target="_blank">Example coordinate file.<a/> These coordinates are given with a chord length of 1, but they can be scaled to any chord length needed. Because of scaling limitations in Inventor, the easiest way to do this to multiply all coordinates by the desired chord length in the Excel file (in Inches, the default unit in Inventor).</li>
+			<li>Attain coordinates for the airfoil from airfoiltools.com and place these in the text file. <a href="sd7037.dat.html" target="_blank">Example coordinate file.<a/> These coordinates are given with a chord length of 1, but they can be scaled to any chord length needed. Because of scaling limitations in Inventor, the easiest way to do this to multiply all coordinates by the desired chord length in the Excel file (in inches, the default unit in Inventor).</li>
 			<li>Import the data into a Microsoft Excel spreadsheet to organize the coordinates.</li>
 			<li>Import the Excel spreadsheet into a sketch in Inventor and interpret the coordinates as a set of points.<br>
 			<center>
