--- a/092116.html
+++ b/092116.html
@@ -43,7 +43,7 @@ In this equation,
 	<li>\(\eta_o\) is a constant which represents the efficiency of the aircraft. The calculation is simply \(\frac{Q_{\rm consumed}}{Q_{\rm supplied}}\) (\(Q\) is energy). Propeller based systems are generally more efficient than jet based propulsion systems. \({\rm R} \propto \eta_o \), so a greater efficiency results in a greater range.</li>
 	<li>\( \frac{L}{D} \) is the lift to drag ratio. The magnitudes of the forces of lift and drag will change because of the changing weight of the aircraft, but the ratio between the two will always stay the same.</li>
 	<li>\(Q_R\) is the amount of energy stored per volumetric unit in the fuel. </li>
-	<li>\(g\) is the acceleration of gravity, about 9.81 \(\frac{m}{s^2}\).</li>
+	<li>\(g\) is the acceleration due to gravity, about 9.81 \(\frac{m}{s^2}\).</li>
 	<li>\(W_{\rm initial}\) and \(W_{\rm final}\) represent the initial and final weights, respectively. If nothing abnormal occurs on the flight (nobody gets thrown off?), the final weight will simply be the initial weight less the weight of the fuel expected to be used.</li>
 </ul>
 The cruising range is an interesting topic to explore because of the importance of range in determining an appropriate load for an aircraft to lift. The cruising range also raises questions about the propulsion system used to power the plane. New developments are being made in subsonic, supersonic, and hypersonic systems.<br><br>
