--- a/100716.html
+++ b/100716.html
@@ -41,4 +41,13 @@ Let's look at an example flow.
 	<img src="conservation.png" width="600px">
 </center>
 <p align="justify">
-At the beginning of the control volume, the flow has a velocity of \(V_1\), a density of \(\rho_1\), and a pressure of \(p_1\). As the volume widens, the fluid follow the edges (\(\rm{V \cdot \hat{n}=0}\), meaning flow is parallel to the side of the control volume) and expands into the greater cross-sectional area.
+At the beginning of the control volume, the flow has a velocity of \(V_1\), a density of \(\rho_1\), and a pressure of \(p_1\). As the volume widens, the fluid follow the edges (\(\rm{V \cdot \hat{n}=0}\), meaning flow is parallel to the side of the control volume) and expands into the greater cross-sectional area. When the cross-sectional volume increases, something about the flow must change. The flow could, according to the conservation of momentum, slow down. The amount of momentum passing through each unit area is lower, but the area of the cross section has increased. The flow might keep the same velocity but have a lower pressure. Maybe the density changes.
+<br><br>
+These three variables will change based on the geometry of the flow, but they are related. How are they related?
+
+$$\rho_1 p_1 V_1 = \rho_2 p_2 V_2$$
+
+This equation is relieving to see. It perfectly represents how the density, pressure, and velocity of a flow are related to one another while not being confusing or complicated. 
+
+<br><br><br>
+--Aryn Harmon
