--- a/posts.html
+++ b/posts.html
@@ -49,3 +49,13 @@ How to estimate the cruising range of an aircraft . . .
 The roles these concepts play in examining flows . . .
 
 <hr>
+
+<h2><a href=101416.html>10/14/16  - <?><a/></h2>
+<?> . . .
+
+<hr>
+
+<h2><a href=102116.html>10/21/16  - Lift and Drag<a/></h2>
+What forces suspend aircraft . . .
+
+<hr>
