--- a/posts.html
+++ b/posts.html
@@ -55,7 +55,7 @@ The roles these concepts play in examining flows . . .
 
 <hr>
 
-<h2><a href=102116.html>10/21/16  - Lift and Drag<a/></h2>
-What forces suspend aircraft . . .
+<h2><a href=102116.html>10/21/16  - Lift<a/></h2>
+Forces which suspend aircraft . . .
 
 <hr>
