--- a/102116.html
+++ b/102116.html
@@ -91,5 +91,6 @@ or in conceptual terms,
 <p align="center">
 (rate of change of mass in CV) + (all momentum flowing in/out) =<br>(gravitation forces) - (pressure forces) + (torsion forces) + (external forces)
 
+<p align="left">
 <br><br><br>
 --Aryn Harmon
