--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ I will post my progress along this journey every Friday.<br>In these posts, I'll
 <br><br>
 <a href="mailto:achcello@gmail.com">achcello@gmail.com</a>
 <br><br><br><br>
-<a href="https://github.com/achcello/achcello.github.io">repository for this site<\a>
+<a href="https://github.com/achcello/achcello.github.io">repository for this site</a>
 <br><br>
 <img src="badjoke.png">
 </center>
