--- a/posts.html
+++ b/posts.html
@@ -50,9 +50,8 @@ The roles these concepts play in examining flows . . .
 
 <hr>
 
-<h2><a href=101416.html>10/14/16  - <?><a/></h2>
-<?> . . .
-
+<h2><a href=101416.html>10/14/16  - Continuum Versus Molecular Models<a/></h2>
+Perspectives on the scale of flows . . .
 <hr>
 
 <h2><a href=102116.html>10/21/16  - Lift<a/></h2>
