--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@ Aryn Harmon
 I have a curiosity for how exactly aircraft fly.<br>I want to know how different body types influence flight behavior,<br>how commercial aircraft are shaped differently than R/C planes.<br>Is it possible to create a hybrid between a quadcopter and a flying wing?
 <br><br>
 These questions have led me to the study of aerodynamics.<br>Eventually I will study the design of flight vehicles as well,<br>but I need to establish a working knowledge of fluid physics<br>before I can apply it. I'll be following along<br>with MIT's introductory aerodynamics class.
-<h2><a href=posts.html>Posts<a/></h2>
+<h3><a href=posts.html>Posts<a/></h3>
 I will post my progress along this journey every Friday.<br>In these posts, I'll be explaining what I'm learning<br>and how I anticipate using this information<br>as well as my thoughts on the matters in general.
 
 <br><br>
 <a href="mailto:achcello@gmail.com">achcello@gmail.com</a>
 <br><br><br><br>
-<a href="https://github.com/achcello/achcello.github.io">repository for this site</a>
-<br><br>
 <img src="badjoke.png">
+</center>
+<br><br><br>
+<center>
+	<a href="https://github.com/achcello/achcello.github.io">repository for this site</a>
 </center>
 
