--- a/posts.html
+++ b/posts.html
@@ -58,3 +58,8 @@ Perspectives on the scale of flows . . .
 Forces which suspend aircraft . . .
 
 <hr>
+
+<h2><a href=110416.html>11/11/16  - Energy<a/></h2>
+ Flows have energy. . .
+
+<hr>
