--- a/posts.html
+++ b/posts.html
@@ -60,6 +60,11 @@ Forces which suspend aircraft . . .
 <hr>
 
 <h2><a href=110416.html>11/11/16  - Energy<a/></h2>
- Flows have energy. . .
+Flows have energy. . .
+
+<hr>
+
+<h2><a href=111816.html>11/18/16  - More Physics<a/></h2>
+Some Helpful attributes. . .
 
 <hr>
