--- a/posts.html
+++ b/posts.html
@@ -60,11 +60,16 @@ Forces which suspend aircraft . . .
 <hr>
 
 <h2><a href=110416.html>11/11/16  - Energy<a/></h2>
-Flows have energy. . .
+Flows have energy . . .
 
 <hr>
 
 <h2><a href=111816.html>11/18/16  - More Physics<a/></h2>
-Some Helpful attributes. . .
+Some helpful attributes . . .
+
+<hr>
+
+<h2><a href=120216.html>12/2/16  - Shock Waves<a/></h2>
+What exactly causes supersonic shock waves and how they affect flow . . .
 
 <hr>
