--- a/c3shirt.html
+++ b/c3shirt.html
@@ -4,8 +4,8 @@
 			<script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_SVG"></script>
 		</head>
 		<body>
-$$\rm{What \hspace the}$$
+<center>What the</center>
 $$\iint_S \vec{F} \cdot d \vec{S}$$
 <br><br><br>
-$$\rm{What \hspace the}$$
+			<center>What the</center>
 $$\iint_S \bf{F} \cdot d \bf{S}$$
