--- a/c3shirt.html
+++ b/c3shirt.html
@@ -5,7 +5,7 @@
 		</head>
 		<body>
 <center>What the</center>
-$$\iint_S \vec{F} \cdot d \vec{S}$$
+$$\displaystyle \iint_S \vec{F} \cdot d \vec{S}$$
 <br><br><br>
 			<center>What the</center>
-$$\iint_S \bf{F} \cdot d \bf{S}$$
+$$\displaystyle \iint_S \bf{F} \cdot d \bf{S}$$
