--- a/posts.html
+++ b/posts.html
@@ -73,3 +73,8 @@ Some helpful attributes . . .
 What exactly causes supersonic shock waves and how they affect flow . . .
 
 <hr>
+
+<h2><a href=121616.html>12/16/16  - First Semester Presentation<a/></h2>
+A summary of what I have learned so far . . .
+
+<hr>
