--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ These questions have led me to the study of aerodynamics.<br>Eventually I will s
 I will post my progress along this journey every Friday.<br>In these posts, I'll be explaining what I'm learning<br>and how I anticipate using this information<br>as well as my thoughts on the matters in general.
 
 <br><br>
-<a href="mailto:achcello@gmail.com">achcello@gmail.com</a>
+achcello[at]gmail[dot]com
 <br><br><br><br>
 <img src="badjoke.png">
 </center>
