--- a/posts.html
+++ b/posts.html
@@ -21,60 +21,65 @@ body {
 </center>
 
 <h2><a href=082616.html>8/26/16  - Airfoils<a/></h2>
-An explanation of NACA airfoils and an example with a model and simulation . . .
+An explanation of NACA airfoils and an example with a model and simulation
 
 <hr>
 
 <h2><a href=090216.html>9/2/16   - Coefficients<a/></h2>
-Definitions of drag and lift coefficients and how they might be used . . .
+Definitions of drag and lift coefficients and how they might be used
 
 <hr>
 
 <h2><a href=090916.html>9/9/16   - Numbers<a/></h2>
-A brief explanation of the Reynolds and Mach numbers and their effect on flow . . .
+A brief explanation of the Reynolds and Mach numbers and their effect on flow
 
 <hr>
 
 <h2><a href=091416.html>9/14/16  - Some Interesting Airfoils<a/></h2>
-A side note about some airfoils I've found . . .
+A side note about some airfoils I've found
 
 <hr>
 
 <h2><a href=092116.html>9/28/16  - Cruising Range<a/></h2>
-How to estimate the cruising range of an aircraft . . .
+How to estimate the cruising range of an aircraft
 
 <hr>
 
 <h2><a href=100716.html>10/7/16  - Conservation of Mass and Momentum<a/></h2>
-The roles these concepts play in examining flows . . .
+The roles these concepts play in examining flows
 
 <hr>
 
 <h2><a href=101416.html>10/14/16  - Continuum Versus Molecular Models<a/></h2>
-Perspectives on the scale of flows . . .
+Perspectives on the scale of flows
 <hr>
 
 <h2><a href=102116.html>10/21/16  - Lift<a/></h2>
-Forces which suspend aircraft . . .
+Forces which suspend aircraft
 
 <hr>
 
 <h2><a href=110416.html>11/11/16  - Energy<a/></h2>
-Flows have energy . . .
+Flows have energy
 
 <hr>
 
 <h2><a href=111816.html>11/18/16  - More Physics<a/></h2>
-Some helpful attributes . . .
+Some helpful attributes
 
 <hr>
 
 <h2><a href=120216.html>12/9/16  - Shock Waves<a/></h2>
-What exactly causes supersonic shock waves and how they affect flow . . .
+What exactly causes supersonic shock waves and how they affect flow
 
 <hr>
 
 <h2><a href=121616.html>12/16/16  - First Semester Presentation<a/></h2>
-A summary of what I have learned so far . . .
+A summary of what I have learned so far
+
+<hr>
+
+<h2><a href=011617.html>1/20/17  - A Start<a/></h2>
+Plans for the coming weeks
 
 <hr>
