--- a/posts.html
+++ b/posts.html
@@ -83,3 +83,8 @@ A summary of what I have learned so far
 Plans for the coming weeks
 
 <hr>
+
+<h2><a href=020117.html>2/1/17  - Updates on Plans<a/></h2>
+Plans for the coming weeks
+
+<hr>
