--- a/posts.html
+++ b/posts.html
@@ -85,6 +85,11 @@ Plans for the coming weeks
 <hr>
 
 <h2><a href=020117.html>2/1/17  - Updates on Plans<a/></h2>
-Plans for the coming weeks
+Fans
+
+<hr>
+
+<h2><a href=021017.html>2/20/17  - Beginning of Construction<a/></h2>
+The start of working with foam and acrylic
 
 <hr>
