--- a/021017.html
+++ b/021017.html
@@ -27,10 +27,50 @@
 				<br>
 				<h2>Posts</h2>
 			</center>
-			<h2>2/10/17 - Beginning of Construction</h2>
+			<h2>2/20/17 - Beginning of Construction</h2>
 <p align="justify">
-I've started drawing out designs on the foam board and begun cutting some of the panels. The construction is slower than expected; cutting foam is not a fast process. So far, I've completed the intake and the test section.<br>
+I've started drawing out designs on the foam board and begun cutting some of the panels. The construction is slower than expected; cutting foam is not a fast process. So far, I've completed the intake and the most of the test section.<br>
 
 <center>
-	<img src="/build_photos/foam_uncut.jpg" width="400px">
+	<img src="foam_uncut.jpg" width="400px">
+</center>
+
+<p align="justify">
+The foam sheets are 20" x 30", so the shapes of the tunnel fit comfortably inside the sheet. The trapezoidal shapes will form the panels of the intake.<br>
+
+<center>
+	<img src="foam_cut.jpg" width="400px">
+	<br><br>
+	<img src="intake_panels.jpg" width="400px">
+</center>
+
+<p align="justify">
+I glued the foam panels together with hot glue. I first tried to use epoxy, but I found it soaked into the foam and could not hold pieces together.<br>
+
+<center>
+	<img src="intake.jpg" width="400px">
+</center>
+
+<p align="justify">
+I have also laser cut the acrylic sheet with teeth to help joining the two sections.<br>
+
+<center>
+<figure>
+	<img src="acrylic_cut.jpg" width="400px">
+	<figcaption>
+		A close photo of the laser cut pattern
+	</figcaption>
+</figure>
+<figure>
+	<img src="acrylic_top.jpg" width="400px">
+	<figcaption>
+		Two 12" x 12" squares with teeth on one side
+	</figcaption>
+</figure>
+<figure>
+	<img src="acrylic_corner.jpg" width="400px">
+	<figcaption>
+		This is how the corner will be constructed.
+	</figcaption>
+</figure>
 </center>
