--- a/021017.html
+++ b/021017.html
@@ -74,3 +74,5 @@ I have also laser cut the acrylic sheet with teeth to help joining the two secti
 	</figcaption>
 </figure>
 </center>
+<br><br><br>
+	--Aryn Harmon
