--- a/030317.html
+++ b/030317.html
@@ -27,7 +27,20 @@
 				<br>
 				<h2>Posts</h2>
 			</center>
-			<h2>3/3/17 - Test Section</h2>
+			<h2>3/9/17 - Test Section</h2>
 <p align="justify">
-This section is where all the important interaction with the wind tunnel goes on. This is where the model is placed and where the 
-<img src="hinge_anim.gif">
+This section is where all the important interaction with the wind tunnel goes on. This is where the model is placed and where the measurements of the body in the tunnel will be taken.
+<br><br>
+To build the test section, I used 24" x 12" of acrylic and 24" x 12" of foam. The acrylic was cut in a tooth pattern to aid adhesion at the 90 degree angle joint.
+<br><br>
+<img src="test_section.jpg" width="400px">
+<br><br>
+The test section is designed to have two clear faces and two foam faces. The foam provides a rigid structure while the acrlic allows for viewing of the test subject. The test subject needs to be able to be taken out of the tunnel easily, so the entirety of the acrylic faces are attached with a hinge to the rest of the tunnel.
+<br><br>
+<img src="hinge_anim.gif" width="400px">
+<br><br>
+The hinge works as it does above. The hinge is a plastic hinge attached with bolts to the acrylic and foam. The bolts through the foam are stabilied by washers on either side and by epoxy which soaks through the foam and strengthens it.
+<br><br>
+<img src="hinge.jpg" width="400px">
+<br><br><br>
+--Aryn Harmon
