--- a/posts.html
+++ b/posts.html
@@ -93,3 +93,8 @@ Fans
 The start of working with foam and acrylic
 
 <hr>
+
+<h2><a href=030317.html>3/9/17  - Test Section<a/></h2>
+Design and function of the test section
+
+<hr>
