--- a/posts.html
+++ b/posts.html
@@ -98,3 +98,8 @@ The start of working with foam and acrylic
 Design and function of the test section
 
 <hr>
+
+<h2><a href=031317.html>3/14/17  - Prototype Airfoil<a/></h2>
+Finding a way to build airfoils for testing
+
+<hr>
