--- a/posts.html
+++ b/posts.html
@@ -103,3 +103,8 @@ Design and function of the test section
 Finding a way to build airfoils for testing
 
 <hr>
+
+<h2><a href=032117.html>3/21/17  - Airfoil Results and Full Model<a/></h2>
+Evaluate 3D printing and model
+
+<hr>
