--- a/posts.html
+++ b/posts.html
@@ -108,3 +108,8 @@ Finding a way to build airfoils for testing
 Evaluate 3D printing and model
 
 <hr>
+
+<h2><a href=040517.html>4/5/17  - Investigations into Design<a/></h2>
+Design aspects of an aircraft
+
+<hr>
