--- a/posts.html
+++ b/posts.html
@@ -113,3 +113,8 @@ Evaluate 3D printing and model
 Design aspects of an aircraft
 
 <hr>
+
+<h2><a href=041817.html>4/25/17  - A Wing<a/></h2>
+Introducing a potential wing
+
+<hr>
