--- a/041817.html
+++ b/041817.html
@@ -29,7 +29,7 @@
 			</center>
 			<h2>4/25/17 - Wing</h2>
 <p align="center">
-<div class="sketchfab-embed-wrapper"><iframe width="800" height="480" src="https://sketchfab.com/models/928f9ebdf9204e98aa49b54866de06cb/embed?autospin=0.2&amp;autostart=1&amp;preload=1" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
+<div class="sketchfab-embed-wrapper"><iframe width="800" height="480" src="https://sketchfab.com/models/928f9ebdf9204e98aa49b54866de06cb/embed?autospin=0.5&amp;autostart=1&amp;preload=1" frameborder="0" allowvr allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel=""></iframe>
 </div>
 
 <p align="justify">
@@ -37,6 +37,13 @@
 This is the wing which I proposed making in the last post. It has a length of 0.5 meters and is swept back. The root and tip airfoils are both the SD7037, an efficient airfoil for slower flow velocities.
 <br><br>
 For the construction of the wing, I will try a couple different methods. The most interesting and accurate would be to use a block of foam and a CNC router. This method is great in terms of accuracy and convenience, but there is material waste. Another option is to laser cut cross sections of the wing out of balsa wood and wrap them in a wing covering. The winglet could be 3D printed and attached to the end.
+<br><br>
+<center>
+	<img src="dihedral.gif" width="600px">
+</center>
+<p align="justify">
+For implementation of the wings, I will use a slight dihedral angle. This means that the wings will each point up at a slight angle. The dihedral will provide a source of stability for the aircraft. When the wings roll, the lift on the lower wing will be greater than the lift on the upper wing. This will cause a net torque on the glider and reverse the roll. It's a negative feedback loop with a homeostasis at a roll of zero degrees relative to the horizon.
+
 
 <br><br><br>
 --Aryn Harmon
