--- a/posts.html
+++ b/posts.html
@@ -1,22 +1,25 @@
 <html>
-<body bgcolor="#fff7e6">
-<head>
-<style>
-body {
-  font-family: monospace;
-  font-size: 16px;
-  width: 800px;
-}
-</style>
-</head>
-<body>
 
-<center>
-<br><br>
-<img src="uavbw.png"><br>
-<br>
-<span>stumbling into aerodynamics</span>
-<br><br><a href=index.html>Home<a/> <a href=posts.html>Posts<a/> <a href=about.html>About Me<a/><br>
+<body bgcolor="#fff7e6">
+
+    <head>
+        <style>
+            body {
+                font-family: monospace;
+                font-size: 16px;
+                width: 800px;
+            }
+        </style>
+    </head>
+
+    <body>
+
+        <center>
+            <br><br>
+            <img src="uavbw.png"><br>
+            <br>
+            <span>stumbling into aerodynamics</span>
+            <br><br><a href=index.html>Home<a/> <a href=posts.html>Posts<a/> <a href=about.html>About Me<a/><br>
 <h2>Posts</h2>
 </center>
 
@@ -116,5 +119,10 @@ Design aspects of an aircraft
 
 <h2><a href=041817.html>4/25/17  - A Wing<a/></h2>
 Introducing a potential wing
+
+<hr>
+
+<h2><a href=050217.html>5/2/17  - A Better Wing<a/></h2>
+Improvements on the wing design
 
 <hr>
