add tex source link

--- a/black-scholes.html
+++ b/black-scholes.html
@@ -31,7 +31,10 @@
 		<p>
 		<p align="justify">
 			Here's the output as a pdf:<br>
-			<a href="black-scholes.pdf">Download</a>
+			<a href="black-scholes.pdf">pdf</a>
+			<br>
+			And the source file:<br>
+			<a href="black-scholes.tex">tex file</a>
 	</p>
 </body>
 <br><br><br>
