--- a/black-scholes.html
+++ b/black-scholes.html
@@ -17,7 +17,7 @@
 	</h2>
 	<p>
 		<p align="justify">
-			This is how the model would look in \(\LaTeX\). Maybe you should check it over to see if it's even right, but this is what it would look like without extra formatting.
+			This is how the model would look in \(\LaTeX\). Maybe you should check it over to see if it's even right, but this is what it would look like without extra formatting. (It might appear to be very small if you are on a mobile device with a high DPI.)
 	</p>
 	<br>
 	<br>
