--- a/black-scholes.html
+++ b/black-scholes.html
@@ -17,24 +17,21 @@
 	</h2>
 	<p>
 		<p align="justify">
-			This is how the model would look in \(\LaTeX\). Maybe you should check it over to see if it's even right, but this is what it would look like without extra formatting. (It might appear to be very small if you are on a mobile device with a high DPI.)
+			This is how the model would look in \(\LaTeX\). Maybe you should check it over to see if it's even right, but this is what it would look like without extra formatting.
 	</p>
 	<br>
 	<br>
-	$$\Delta w = \frac{\partial w}{\partial x} \Delta x + \frac{1}{2} \frac{\partial^2 w}{\partial x^2} v^2 x^2 \Delta t + \frac{\partial w}{\partial t} \Delta t$$
+	$$\frac{\partial w}{\partial t} = rw-rx\frac{\partial w}{\partial x}-\frac{1}{2}v^2 x^2 \frac{\partial^2 w}{\partial x^2}$$
 	<br>
 	<br>
 	The code would look like this:<br><br>
 		<code>
-		$$\Delta w = \frac{\partial w}{\partial x} \Delta x + \frac{1}{2} \frac{\partial^2 w}{\partial x^2} v^2 x^2 \Delta t + \frac{\partial w}{\partial t} \Delta t$$
+		$$\frac{\partial w}{\partial t} = rw - rx \frac{\partial w}{\partial x} - \frac{1}{2}v^2 x^2 \frac{\partial^2 w}{\partial x^2}$$
 	</code>
 		<p>
 		<p align="justify">
 			Here's the output as a pdf:<br>
-			<a href="black-scholes.pdf">pdf</a>
-			<br>
-			And the source file:<br>
-			<a href="black-scholes.tex">tex file</a>
+			<a href="black-scholes.pdf">Download</a>
 	</p>
 </body>
 <br><br><br>
