--- a/cookie-night.html
+++ b/cookie-night.html
@@ -1,3 +1,12 @@
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1,h2,h3,h4,h5,h6 {
+    font-family: "Playfair Display";
+    letter-spacing: 5px;
+}
+</style>
+
 <h1 id="cookienightthings">Cookie Night Things</h1>
 
 <h2 id="oatmealraisinhttpswwwgeniuskitchencomrecipeoatmealraisincookies35813"><a href="https://www.geniuskitchen.com/recipe/oatmeal-raisin-cookies-35813">Oatmeal Raisin</a></h2>
