--- a/cookie-night.html
+++ b/cookie-night.html
@@ -1,12 +1,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1,h2,h3,h4,h5,h6 {
-    font-family: "Playfair Display";
-    letter-spacing: 5px;
+body, html {
+    height: 100%;
+    font-family: "Inconsolata", sans-serif;
 }
-</style>
 
+</style>
+<body>
 <h1 id="cookienightthings">Cookie Night Things</h1>
 
 <h2 id="oatmealraisinhttpswwwgeniuskitchencomrecipeoatmealraisincookies35813"><a href="https://www.geniuskitchen.com/recipe/oatmeal-raisin-cookies-35813">Oatmeal Raisin</a></h2>
@@ -34,3 +35,4 @@ h1,h2,h3,h4,h5,h6 {
 
 <li>~~Flaky sea salt~~ yeah wtf we're not on Chef's Table over here</li>
 </ul>
+</body>
