--- a/cookie-night.html
+++ b/cookie-night.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
+<link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 <style>
-body, html {
+body, html, h1, h2, h3, ul, li {
     height: 100%;
-    font-family: "Inconsolata", sans-serif;
+    font-family: "Cabin", sans-serif;
 }
 
 </style>
