--- a/cookie-night.html
+++ b/cookie-night.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
 <style>
-body, html, h1, h2, h3, ul, li {
+body, html {
     height: 100%;
     font-family: "Cabin", sans-serif;
 }
