--- a/cookie-night.html
+++ b/cookie-night.html
@@ -5,7 +5,9 @@ body, html {
     height: 100%;
     font-family: "Cabin", sans-serif;
 }
-
+body  {
+    background-image: url("https://d39l2hkdp2esp1.cloudfront.net/img/photo/140815/140815_00_2x.jpg?20180223065152");
+}
 </style>
 <body>
 <h1 id="cookienightthings">Cookie Night Things</h1>
